fixed issue with wolves moving on any keypress

--- a/nancydrew-game/index.html
+++ b/nancydrew-game/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section>
-        <h1 class="announce">Get the road runner to his home safely!</h1>
+        <h1 class="announce">Get to safety!</h1>
         <div class="buttonContainer"><button id="resetButton">Reset Game</button></div>
         <div id="frame">
         </div>
